# timely_worlds

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manufacturing.rs  retail.rs
crates/examples/: Cargo.toml
crates/predictors/: Cargo.toml
crates/predictors/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  metrics.rs
crates/scenarios/: Cargo.toml
crates/scenarios/src/: lib.rs  manufacturing.rs  retail.rs
crates/views/: Cargo.toml
crates/views/src/: lib.rs
docs/: README.md  concept.md  design.md  eval_runs.md  evaluation.md  paper_outline.md
scripts/: run_mfg_demo.sh  run_retail_demo.sh  summarize_metrics.py  sweep_mfg.sh  sweep_retail.sh
