[workspace]
members = [
    "crates/core",
    "crates/runtime",
    "crates/views",
    "crates/predictors",
    "crates/scenarios",
    "crates/examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
authors = ["Timely Worlds Team"]
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
timely = "0.12"
differential-dataflow = "0.13"

